# TFHE_Example

./: .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
benchmark/: ExternalProduct.cpp  example.cpp
include/: Alice.h  Cloud.h  Verif.h  simple_timer.h
src/: Alice.cpp  Cloud.cpp  Verif.cpp
test/: main.cpp
